Fix: Ensure consistent scrollbar visibility on homepage

--- a/prosjekt2/frontend/src/index.css
+++ b/prosjekt2/frontend/src/index.css
@@ -37,6 +37,7 @@ body {
 	overflow-x: hidden;
 	justify-content: center;
 	background-color: #eaf2d7;
+	overflow-y: scroll;
 }
 
 h1 {
